Add experimental contract and associated build script
Bug: 64691432
Test: builds
Change-Id: I91916f3e3a5fea4744d1b25b4011a8c2f81bdd49

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,8 @@
     <uses-sdk android:minSdkVersion="25" android:targetSdkVersion="25" />
 
     <application>
-
+        <service
+            android:name=".suggestions.SuggestionService"
+            android:exported="true" />
     </application>
 </manifest>
