--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,12 @@
           package="com.android.settings.intelligence">
 
     <uses-sdk android:minSdkVersion="27" android:targetSdkVersion="27" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application>
+        <service
+            android:name=".suggestions.SuggestionService"
+            android:exported="true"
+            android:permission="android.permission.BIND_SETTINGS_SUGGESTIONS_SERVICE" />
     </application>
 </manifest>
