--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,9 @@
     <uses-sdk android:minSdkVersion="27" android:targetSdkVersion="27" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <application>
+    <application
+        android:label="@string/app_name_settings_intelligence"
+        android:icon="@drawable/ic_launcher_settings_intelligence">
         <service
             android:name=".suggestions.SuggestionService"
             android:exported="true"
