--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,11 @@
 
     <uses-sdk android:minSdkVersion="27" android:targetSdkVersion="27" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
+    <uses-permission android:name="android.permission.READ_SEARCH_INDEXABLES" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />
+    <uses-permission android:name="android.permission.MANAGE_FINGERPRINT" />
 
     <application
         android:label="@string/app_name_settings_intelligence"
@@ -28,5 +33,16 @@
             android:name=".suggestions.SuggestionService"
             android:exported="true"
             android:permission="android.permission.BIND_SETTINGS_SUGGESTIONS_SERVICE" />
+
+        <activity
+            android:name=".search.SearchActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Settings.NoActionBar">
+            <intent-filter priority="-1">
+                <action android:name="com.android.settings.action.SETTINGS_SEARCH" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
     </application>
 </manifest>
