--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,6 +39,7 @@
             android:exported="true"
             android:theme="@style/Theme.Settings.NoActionBar">
             <intent-filter priority="-1">
+                <action android:name="com.android.settings.action.SETTINGS_SEARCH" />
                 <action android:name="android.settings.APP_SEARCH_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
